force-app/main/default/objects/Customer_Portfolio__c/Customer_Portfolio__c.object-meta.xml
<CustomObject>
    <description>Represents the link between Users and Accounts.
This object stores information about whether access is direct (External) or inherited (Internal), and allows access propagation logic to operate based on the role hierarchy.</description>
    <label>Customer Portfolio</label>
    <nameField>
        <displayFormat>CP-{0000000}</displayFormat>
        <label>Customer Portfolio Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customers Portfolio</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>