force-app/main/default/objects/Customer_Portfolio__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The customer to which the user has access.</description>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customers Portfolio</relationshipLabel>
    <relationshipName>Customers_Portfolio</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>