force-app/main/default/objects/Customer_Portfolio__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>Indicates how the user was granted access to the customer.</description>
    <inlineHelpText>&quot;External&quot; is only for access given by the third-party system. 
&quot;Internal&quot; is only for access inherited via role hierarchy.</inlineHelpText>
    <label>Source</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>External</fullName>
            </value>
            <value>
                <fullName>Internal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>