force-app/main/default/objects/Customer_Portfolio__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user who currently has access to the customer.</description>
    <inlineHelpText>The user who currently has access to the customer.</inlineHelpText>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Customers_Portfolio</relationshipName>
    <type>Lookup</type>
</CustomField>