force-app/main/default/objects/Customer_Portfolio__c/validationRules/CustomerPortfolio_User_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>CustomerPortfolio_User_Required</fullName>
    <active>true</active>
    <description>Guarantees the User field is required.</description>
    <errorConditionFormula>ISBLANK( User__c )</errorConditionFormula>
    <errorMessage>A user must always be assigned.</errorMessage>
</ValidationRule>